[package]
name = "scikiwi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 's'

[[bin]]
name = "client"
path = "src/client/main.rs"

#[[bin]]
#name = "frontend"
#path = "src/frontend/main.rs"

[dependencies]
# activitypub_federation = "0.2.3"
#tokio = { version = "1.21.2", features = ["full"] }
prokio = { version = "0.1.0" }
serde_json = "1.0.87"
# actix?
serde = {version = "1.0.147", features = ["derive"] }
# dioxus = { version = "0.2.4", features = ["desktop", "dioxus-liveview", "fermi"] }
dioxus = { version = "0.2.4", features = ["web", "fermi"] }
# reqwest = { version = "0.11", features = ["json"] }
reqwest-wasm = {version = "0.11.15", features = ["json"] }
#redis = { version = "0.22.1", features = ["tokio", "serde", "serde_json", "tokio-comp"] }
# fermi = { version = "0.2.1" }
#blurhash-ng = "0.1.2"
#base64 = "0.13.1"
#png = "0.17.7"

# https://github.com/DioxusLabs/taffy